<resources>
    <string name="app_name">Cuida Portman</string>
    <string name="nombre">Nombre</string>
    <string name="actualizar">Actualizar Datos</string>
    <string name="usuario">Usuario</string>
    <string name="usuarioActual">Usuario Actual:</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="repita_password">Repita Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="registrar_cuenta">Registrar Cuenta</string>
    <string name="pantalla_de_profile">Pantalla de profile</string>
    <string name="registrar">Registrar</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="cuenta_existente">Ya tengo cuenta</string>
    <string name="reestablecer">Reestablecer Contraseña</string>
    <string name="olvidada">Olvide mi contraseña</string>
    <string name="capturar">Nueva Incidencia</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="escribe_el_comentario">Escribe el comentario</string>
    <string name="realiza_una_foto">Realiza una foto</string>
    <string name="enviar_incidencia">Enviar Incidencia</string>
    <string name="fotocapturada">Foto Capturada</string>
    <string name="full_image">full Image</string>
    <string name="textview">TextView</string>
    <string name="imagefull">imageFull</string>
    <string name="perfil">Perfil</string>
    <string name="nuevo_nombre">Nuevo Nombre</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="nuevo_password">Nueva Contraseña</string>
    <string name="nombre_actual">Nombre actual:</string>
    <string name="coment">Enviar Comentario</string>
    <string name="textComent">Escribe tu comentario</string>
    <string name="volver">Volver</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="ver_Incidencias">Ver Incidencias</string>
    <string name="wellcome">Bienvenido, tus datos son:</string>
</resources>
