<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/usuario"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"
        android:inputType="text|textCapSentences">
    </EditText>

    <EditText
        android:id="@+id/editFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/nombreCompleto"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"
        android:inputType="text|textCapSentences">
    </EditText>

    <EditText
        android:id="@+id/editEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress|textCapSentences">
    </EditText>

    <EditText
        android:id="@+id/editPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"
        android:inputType="textPassword">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegistrarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_redondo"
            android:text="@string/registrar"
            android:textColor="@color/textColor"
            tools:ignore="LabelFor"
            android:importantForAutofill="no">
        </Button>

        <Button
            android:id="@+id/btnSendToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde_redondo"
            android:importantForAutofill="no"
            android:text="@string/cuenta_existente"
            android:textColor="@color/textColor"
            tools:ignore="LabelFor">
        </Button>
    </LinearLayout>
</LinearLayout>